# ROS2-mobile-manipulation-sim

./: LICENSE  README.md
manipulation_assignment/: CMakeLists.txt  README.md
manipulation_assignment/cfg/: tags_36h11.yaml
manipulation_assignment/launch/: apriltag.launch.py  assignment_launch.py
manipulation_assignment/src/: apriltag_listener.cpp  color_detector_node.cpp  manager_node.cpp
navigation_assignment/: CMakeLists.txt  README.md
navigation_assignment/action/: FollowCorridor.action
navigation_assignment/cfg/: tags_36h11.yaml
navigation_assignment/launch/: apriltag.launch.py  assignment_launch.py  extra_launch.py
navigation_assignment/src/: apriltag_listener.cpp  apriltag_pose_processor.cpp  corridor_detector.cpp  corridor_follower.cpp  manager_node.cpp  nav2_setup_node.cpp  table_detector_node.cpp
navigation_assignment/srv/: CorridorDetection.srv  TableDetection.srv
